--- a/document/技术手册.md
+++ b/document/技术手册.md
@@ -1,5 +1,39 @@
 # 技术手册
 
+## 基本原理
+
+本项目后端为golang编写。在收到一个新连接后与客户端浏览器打开一个websocket连接，感知对端状态同时，作信令传输作用。
+
+学生端、服务端、监控端的数据流关系为：
+
+```
+       +-----------------------------------------------+
+       |                                               |
+       |    服务器                                     |
+       |                       信令（学生端-监控端）   |
+       |          +-------------------------------+    |
+       |          |                               |    |
+       +-+-+----------+------------------------------+-+
+         | |      |   |                           |  |
+         | |      |   |                           |  |
+         | |      |   |webrtc                     |  |
+websocket| |信令  |   |                           |  |websocket
+         | |      |   |                           |  |
+         | |      |   |                           |  |
+         | |      |   |                           |  |
+         | |      |   |                           |  |
+       +-+-+------+---++               +----------+--+-+
+       |               |   webrtc      |               |
+       |  学生端       +---------------+   监控端      |
+       |               |               |               |
+       +---------------+               +---------------+
+
+```
+
+## 视频编码标准
+
+h264
+
 ## 帧率、码率、采样率的设置
 
 <!-- 王远洋 -->
