--- a/document/技术手册.md
+++ b/document/技术手册.md
@@ -36,4 +36,20 @@ h264
 
 ## 帧率、码率、采样率的设置
 
-<!-- 王远洋 -->
+此部分关于视频的设置，目前是在前端中设定，且不可改变，在`source/resources/js/peer.js`文件中，具体如：
+
+```javascript
+const displayMediaOptions = {
+    video: {
+        frameRate: { ideal: 15, max: 15 }
+    },
+    audio: false
+}
+
+const mediaStreamConstrains = {
+    video: false,
+    audio: true
+}
+```
+
+关于此部分内容，并未提供可变修改的设置。如果需要修改，可以直接在`peer.js`文件中修改。
