自启动脚本

--- a/document/安装手册.md
+++ b/document/安装手册.md
@@ -4,12 +4,12 @@
 
 #### golang
 
-<!-- 裘自立 -->
+`dnf install golang -y`
 
 ### 编译
 
-<!-- 裘自立 -->
+`cd source && bash ./build.sh`
 
-### 安装
+### 启动
 
-<!-- 裘自立 -->
+`./sevcer -c config/webrtc-conf.toml`
